Adjust "Merge with Layer Below"/"Merge Group" to switch text automatically

We should also hide "Flatten Layer" when a group is
selected, because it is a full equivalent of the other
action.

BUG:376613